# hash-files

./: .gitignore  Cargo.toml  README.md  make-big-target.sh
.cargo/: config.toml
profiles/large-directory-with-symlinks-1-thread/: README.md
profiles/large-directory-with-symlinks-2-threads/: README.md
profiles/small-directory/: README.txt
src/: io_uring.rs  io_uring_batched.rs  limits.rs  main.rs  rayon_thread_pool.rs  types.rs
