[package]
name = "hash-files"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1.4.1"
boxcar = "0.2.1"
crossbeam = "0.8.2"
nix = "0.26.2"
num_cpus = "1.16.0"
rayon = "1.7.0"
semaphore = "0.4.0"
walkdir = "2.3.3"

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
